# 2025Fall_ComputerVision

./: .gitignore  Basic Structure.docx  README.md  VFX detection.docx  requirements.txt
Logger/: README.md  (+1 more)
NYU CV final project/: .gitignore  README.md  pyproject.toml  requirements.txt
NYU CV final project/configs/: classes.txt  classes_v2.txt  jinx_abilities.yaml  jinx_abilities_v2.yaml  training_accuracy.yaml  training_config.yaml  training_speed.yaml  ui_regions.json
NYU CV final project/data/clips/: .gitkeep
NYU CV final project/data/events/: LABELING_GUIDE.md  events.csv
NYU CV final project/data/images/unlabeled/: .gitkeep
NYU CV final project/data/labels/: train.cache  val.cache
NYU CV final project/data/raw_videos/: .gitkeep
NYU CV final project/docs/: training.md
NYU CV final project/notebooks/: .gitkeep
NYU CV final project/src/: __init__.py
NYU CV final project/src/data/: __init__.py  clip_extractor.py  dataset_splitter.py  frame_extractor.py
NYU CV final project/src/detection/: __init__.py  combined_detector.py  ui_detector.py
NYU CV final project/src/events/: __init__.py  aggregator.py  hit_classifier.py
NYU CV final project/src/inference/: __init__.py  detector.py  video_inference.py
NYU CV final project/src/training/: __init__.py  train_yolo.py
NYU CV final project/src/utils/: __init__.py  video_utils.py  visualization.py
NYU CV final project/tools/: __init__.py  bbox_labeler.py  brush_labeler.py  calibrate_ui_regions.py  create_detection_clips.py  detect_ui_cooldowns.py  extract_frames.py  extract_labeled_frames.py  label_video.py  live_detection_viewer.py  make_event_clips.py  prepare_dataset.py  review_annotations.py  run_combined_detection.py  run_experiments.sh  run_inference.py  split_train_val.py  verify_dataset.py
configs/: jinx_w.yaml  (+1 more)
(+1385 files in other folders)
